mainに画像を作成

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    
+    <header></header>
+    <main>
+        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_01.jpg">
+        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_02.jpg">
+        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_03.jpg">
+        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_04.jpg">
+        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_05.jpg">
+        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_06.jpg">
+        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_07.jpg">
+        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_08.jpg">
+        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_09.jpg">
+        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_10.jpg">
+        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_11.jpg">
+    </main>
+    <footer></footer>
 </body>
 </html>
