--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,17 +9,19 @@
 <body>
     <header></header>
     <main>
-        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_01.jpg">
-        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_02.jpg">
-        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_03.jpg">
-        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_04.jpg">
-        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_05.jpg">
-        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_06.jpg">
-        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_07.jpg">
-        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_08.jpg">
-        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_09.jpg">
-        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_10.jpg">
-        <img src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_11.jpg">
+        <img class="pic1" src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_01.jpg">
+        <div class="info">
+        <img class="pic2" src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_02.jpg">
+        </div>
+        <img class="pic3" src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_03.jpg">
+        <img class="pic4" src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_04.jpg">
+        <img class="pic5" src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_05.jpg">
+        <img class="pic6" src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_06.jpg">
+        <img class="pic7" src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_07.jpg">
+        <img class="pic8" src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_08.jpg">
+        <img class="pic9" src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_09.jpg">
+        <img class="pic10" src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_10.jpg">
+        <img class="pic11" src="https://image.rakuten.co.jp/sonique/cabinet/pc/n-maldonseasalt_11.jpg">
     </main>
     <footer></footer>
 </body>
